@@ -30,7 +30,6 @@ CIndexedValue.2=Specified range out of bounds.
 CModule.0=Unknown
 CModule.1=Unknown
 CModule.2=Invalid symbols file.
-CModule.3=Symbols file ''{0}'' not found.
 CModule.4=Not supported
 CModuleManager.0=Error loading symbols.
 CModuleManager.1=Error loading symbols.
